--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.sshtools</groupId>
 	<artifactId>jadaptive-oauth-client</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>1.0.0</version>
 	<name>JDAPTIVE OAuth Client</name>
 	<properties>
 		<maven.compiler.target>17</maven.compiler.target>
